blogstyle.css
body {
    background-color: #ffd9ff;
    font-family: Verdana, sans-serif;
    margin: 0px;
    padding: 0px;
    text-align: center;
}

h1 {
    color: rgb(6, 6, 6);
}

.new{
    padding:2%;
    color:#000e47;
}


.blog-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 2rem;
    padding: 2%;
    background-color: #000e47;
    color: #000e47;
}

.blog-card {
    overflow: hidden;
    display: flex;
    flex-direction: column;
    background-color: #ffd9ff;
    filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.5));
}

.banner {
    position: relative;
    width: 100%;
    overflow: hidden;
    background-color: #fba1fb;
}

.content {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: 0.5rem;
}

.blogtext {
    padding: 0.5rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
    align-self: center;
    max-width: 90%;
    border-style: solid;
    border-width: 0.2rem;
    border-color: #cacaca;
}

.category {
    float: left;
    padding: 0.5rem;
}

.title a {
    text-decoration: none;
    color: #000e47;
    font-size: clamp(1.3rem, 3vw + 0.5rem, 5rem);
}

.title a:hover {
    color:#001a82;
}

.author {
    opacity: 0.6;
    font-size: clamp(0.2rem, 0.5vw + 0.5rem, 5rem);
}

.date {
    font-size: clamp(0.2rem, 0.6vw + 0.5rem, 5rem);
    margin-bottom: 10%;
}

.readmore a {
    padding: 0.1rem;
    text-decoration: none;
    color: #000e47;
    background-color: #fba1fb;
}

.readmore a:hover {
    background-color: #000e47;
    color: #EBf3F9;
}


.search-container {
    input[type=text] {
        width: 100%;
        padding: 2%;
        font-size: clamp(0.5rem, 1vw + 0.5rem, 2rem);
    }
}

